--- a/GTSpecDB-master/GTSpecDB.Editor/StringDatabaseManager.xaml
+++ b/GTSpecDB-master/GTSpecDB.Editor/StringDatabaseManager.xaml
@@ -9,21 +9,21 @@
     <Grid>
 
         <TextBox Height="20" Margin="337,0,94,10" Name="tb_NewString" VerticalAlignment="Bottom"/>
-        <Button Name="btn_AddString" Content="Add String" Margin="0,0,10,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="79" Click="btn_AddString_Click"/>
+        <Button Name="btn_AddString" Content="{DynamicResource mi_btn_AddString_str}" Margin="0,0,10,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="79" Click="btn_AddString_Click"/>
 
-        <Label Content="Double-click any string on the list below to select it." Margin="337,4,10,0" Height="26" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="{DynamicResource mi_lb_StringList_str}" Margin="337,4,10,0" Height="26" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
         <ListBox Name="lb_StringList" Margin="337,35,10,35" ItemsSource="{Binding Strings}" MouseDoubleClick="lb_StringList_MouseDoubleClick" SelectionChanged="lb_StringList_SelectionChanged" />
 
-        <Label Content="Filter by String.." Margin="10,29,613,0" Height="26" VerticalAlignment="Top"/>
+        <Label Content="{DynamicResource mi_tb_FilterString_str}" Margin="10,29,613,0" Height="26" VerticalAlignment="Top"/>
         <TextBox Height="20" Margin="111,35,426,0" Name="tb_FilterString" VerticalAlignment="Top" TextChanged="tb_FilterString_TextChanged"/>
-        
-        <Button Name="btn_CopyCurrent" Content="Copy Current" Margin="10,0,426,61" Height="46" VerticalAlignment="Bottom" Click="btn_CopyCurrent_Click"/>
-        <Button Name="btn_SelectEmptyString" Content="Select Empty/Blank String" Margin="10,0,426,10" Height="46" VerticalAlignment="Bottom" Click="btn_SelectEmptyString_Click"/>
 
-        <Label Content="Edit String" Margin="10,62,613,0" Height="26" VerticalAlignment="Top"/>
+        <Button Name="btn_CopyCurrent" Content="{DynamicResource mi_btn_CopyCurrent_str}" Margin="10,0,426,61" Height="46" VerticalAlignment="Bottom" Click="btn_CopyCurrent_Click"/>
+        <Button Name="btn_SelectEmptyString" Content="{DynamicResource mi_btn_SelectEmptyString_str}" Margin="10,0,426,10" Height="46" VerticalAlignment="Bottom" Click="btn_SelectEmptyString_Click"/>
+
+        <Label Content="{DynamicResource mi_tb_StringEdit_str}" Margin="10,62,613,0" Height="26" VerticalAlignment="Top"/>
         <TextBox Name="tb_StringEdit" Height="20" Margin="84,68,475,0" IsEnabled="False" VerticalAlignment="Top" />
 
-        <Button Name="btn_DeleteString" IsEnabled="False" Content="Delete String (The use of impossibilities)" Margin="111,96,426,0" Height="26" VerticalAlignment="Top" Click="btn_DeleteString_Click"/>
-        <Button Name="btn_SetString" Content="Set" HorizontalAlignment="Left" Margin="288,68,0,0" VerticalAlignment="Top" Width="44" Click="btn_SetString_Click"/>
+        <Button Name="btn_DeleteString" IsEnabled="False" Content="{DynamicResource mi_btn_DeleteString_str}" Margin="111,96,426,0" Height="26" VerticalAlignment="Top" Click="btn_DeleteString_Click"/>
+        <Button Name="btn_SetString" Content="{DynamicResource mi_btn_SetString_str}" HorizontalAlignment="Left" Margin="288,68,0,0" VerticalAlignment="Top" Width="44" Click="btn_SetString_Click"/>
     </Grid>
 </Window>
